# uber-simulation-rust-react

./: Cargo.toml  README.md
client/: package-lock.json  package.json  tsconfig.json
client/pages/: FrontPage.tsx  _app.tsx  index.tsx
client/pages/components/: Chat.tsx  CreditCards.tsx  Drive.tsx  EndTravel.tsx  Login.tsx  Map.tsx  RandomCreditCards.ts  RandomRoutes.ts  TravelComponet.tsx  UsuallyTravels.tsx
src/: main.rs
