[package]
name = "uber-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
actix-web-actors = "4.2.0"
actix = "0.13.1"
tokio = { version = "1", features = ["full"] }


